# RAG_Practice

00_Data_Ingestion/: main.py  pyproject.toml
01_Chunking/: main.py  pyproject.toml
02_Embeddings/: main.py  pyproject.toml
02_Embeddings/my_vector_store/: index.faiss  index.pkl
03_Retriever/: main.py  pyproject.toml
03_Retriever/HR_Policy_Vector/: index.faiss  index.pkl
04_Agent_with_RAG/: main.py  pyproject.toml
04_Agent_with_RAG/HR_Policy_Vector/: index.faiss  index.pkl
